# studyCProject2025

./: CMakeLists.txt
Day01_初识输入输出/include/: public_header.h
Day01_初识输入输出/src/: Day01_scanf & printf.c  Day01_scanf & printf.h  main  main.c  private_header.h
Day01_初识输入输出/src/main.dSYM/Contents/Resources/DWARF/: main
